--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>e-commerce</title>
-</head>
-<body>
-  <h1>e-commerce</h1>
-
-  <script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/inital.css" />
+    <link rel="stylesheet" href="./styles/top.css" />
+    <link rel="stylesheet" href="./styles/bottom.css" />
+    <title>e-commerce</title>
+  </head>
+  <body>
+    <h1>e-commerce</h1>
+    <script src="./script.js"></script>
+  </body>
 </html>
