fix: video for ios

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./styles/common.css" />
     <link rel="stylesheet" href="./styles/layout-card.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <link rel="stylesheet" href="./styles/features.css" />
     <link rel="stylesheet" href="./styles/showcase.css" />
     <link rel="stylesheet" href="./styles/products.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
@@ -53,7 +52,12 @@
       <div class="top-content">
         <div class="sphere">
           <h1>Food<br />Delivery</h1>
-          <video src="./assets/videos/header_1.mp4" autoplay muted loop></video>
+          <video
+            src="./assets/videos/header_1.mp4"
+            autoplay
+            muted
+            loop　playsinline
+          ></video>
         </div>
       </div>
     </header>
@@ -77,6 +81,7 @@
               autoplay
               muted
               loop
+              playsinline
             ></video
           ></span>
           <span
@@ -86,6 +91,7 @@
               autoplay
               muted
               loop
+              playsinline
             ></video
           ></span>
           <span
@@ -95,6 +101,7 @@
               autoplay
               muted
               loop
+              playsinline
             ></video
           ></span>
         </div>
