--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             src="./assets/videos/header_1.mp4"
             autoplay
             muted
-            loop　playsinline
+            loop
+            playsinline
           ></video>
         </div>
       </div>
