fix: mobile layout

--- a/index.html
+++ b/index.html
@@ -73,38 +73,40 @@
 
     <!-- showcase section -->
     <section class="showcase">
-      <div class="box">
-        <div class="content">
-          <span
-            ><video
-              class="video"
-              src="./assets/videos/video_9.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-            ></video
-          ></span>
-          <span
-            ><video
-              class="video"
-              src="./assets/videos/video_9.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-            ></video
-          ></span>
-          <span
-            ><video
-              class="video"
-              src="./assets/videos/video_9.mp4"
-              autoplay
-              muted
-              loop
-              playsinline
-            ></video
-          ></span>
+      <div class="showcase-box">
+        <div class="box">
+          <div class="content">
+            <span
+              ><video
+                class="video"
+                src="./assets/videos/video_9.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+              ></video
+            ></span>
+            <span
+              ><video
+                class="video"
+                src="./assets/videos/video_9.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+              ></video
+            ></span>
+            <span
+              ><video
+                class="video"
+                src="./assets/videos/video_9.mp4"
+                autoplay
+                muted
+                loop
+                playsinline
+              ></video
+            ></span>
+          </div>
         </div>
       </div>
       <div class="btn showcase-btn" id="showcase-btn">See More</div>
