add: new features

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
       src="https://kit.fontawesome.com/5bf5434648.js"
       crossorigin="anonymous"
     ></script>
-    <title>Ghost Restaurant</title>
+    <title>GHOST RESTAURANT</title>
   </head>
   <body>
     <!-- header section -->
     <header>
       <nav class="navbar">
         <div class="logo-box">
-          <div><i class="fas fa-ghost"></i> GHOST RESTAURANT</div>
+          <i class="fas fa-ghost"></i>
         </div>
+        <span>GHOST RESTAURANT</span>
         <ul class="nav-link">
           <li id="shopping-cart"><i class="fas fa-shopping-cart"></i></li>
           <li id="shopping-cart-close" class="toggle">
