--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/showcase.css" />
     <link rel="stylesheet" href="./styles/products.css" />
+    <link rel="stylesheet" href="./styles/nextFeatures.css">
     <link rel="stylesheet" href="./styles/footer.css" />
     <script
       src="https://kit.fontawesome.com/5bf5434648.js"
@@ -124,6 +125,22 @@
       </div>
     </section>
 
+    <!-- Next features -->
+  <section class="nextFeatures">
+    <div class="container">
+      <div class="nextCard">
+        <div class="cuisine">
+          <div class="circle"></div>
+          <img src="./assets/images/Churrasco.png" alt="churrasco">
+        </div>
+        <div class="info">
+          <h1 class="title"></h1>
+          <h3>cuisine</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
     <!-- footer section -->
     <footer class="footer">
       <div class="footer-box">
@@ -169,5 +186,6 @@
     <script src="./scripts/features.js"></script>
     <script src="./scripts/showcase.js"></script>
     <script src="./scripts/products.js"></script>
+    <script src="/scripts/nextFeatures.js"></script>
   </body>
 </html>
