--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
     <script src="./scripts/features.js"></script>
     <script src="./scripts/showcase.js"></script>
     <script src="./scripts/products.js"></script>
-    <script src="/scripts/nextFeatures.js"></script>
+    <script src="./scripts/nextFeatures.js"></script>
   </body>
 </html>
