--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       src="https://kit.fontawesome.com/5bf5434648.js"
       crossorigin="anonymous"
     ></script>
-
     <title>GHOST RESTAURANT</title>
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <!-- 3d features -->
+    <canvas id="canvas"></canvas>
     <!-- header section -->
     <header>
       <nav class="navbar">
