--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="We provide the delivery service 🥗🍖" />
+    <meta name="author" content="Hiro and Shin" />
+    <meta name="keywords" content="restaurant,delivery,food" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/inital.css" />
     <link rel="stylesheet" href="./styles/canvas.css" />
@@ -21,8 +24,6 @@
     <title>GHOST RESTAURANT</title>
   </head>
   <body>
-    <!-- 3d features -->
-    <canvas id="canvas"></canvas>
     <!-- header section -->
     <header>
       <nav class="navbar">
@@ -143,6 +144,9 @@
         </div>
       </div>
     </section>
+
+    <!-- 3d features -->
+    <canvas id="canvas"></canvas>
 
     <!-- footer section -->
     <footer class="footer">
