--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
         <div class="nextCard">
           <div class="cuisine">
             <div class="circle"></div>
-            <img src="./assets/images/Churrasco.png" alt="churrasco" />
+            <img src="./assets/images/churrasco2.png" alt="churrasco" />
           </div>
           <div class="info">
-            <h1 class="title"></h1>
-            <h3>cuisine</h3>
+            <h1 class="title">Coming Soon!</h1>
+            <h3>Churrasco is the term for a barbecue which originated in southern Brazil. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
           </div>
         </div>
       </div>
